--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "firebase": "^10.11.1",
     "nodemon": "^3.1.0",
     "stripe": "^15.3.0"
   }
